--- a/SlideShow.html
+++ b/SlideShow.html
@@ -65,7 +65,7 @@
                     <img src="../image/สวนสาธารณะหนองพระแล_230219_0.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item" data-bs-interval="1500">
-                    <img src="/image/สวนสาธารณะหนองพระแล_230219_1.jpg" class="d-block w-100" alt="...">
+                    <img src="../image/สวนสาธารณะหนองพระแล_230219_1.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item" data-bs-interval="1500">
                     <img src="../image/สวนสาธารณะหนองพระแล_230219_2.jpg" class="d-block w-100" alt="...">
