--- a/topic.html
+++ b/topic.html
@@ -45,31 +45,31 @@
         <div id="carouselExampleInterval" class="carousel slide" data-sbs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="1000">
-                <img src="/image/สวนสาธารณะอต_230223_3.jpg" class="d-block w-100" alt="...">
+                <img src="../image/สวนสาธารณะอต_230223_3.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="1000">
-                <img src="/image/สวนสาธารณะอต_230223_4.jpg" class="d-block w-100" alt="...">
+                <img src="../image/สวนสาธารณะอต_230223_4.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="1000">
-                <img src="/image/สวนสาธารณะอต_230223_5.jpg" class="d-block w-100" alt="...">
+                <img src="../image/สวนสาธารณะอต_230223_5.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="1000">
-                <img src="/image/สวนสาธารณะอต_230223_7.jpg" class="d-block w-100" alt="...">
+                <img src="../image/สวนสาธารณะอต_230223_7.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="1000">
-                <img src="/image/สวนสาธารณะอต_230223_8.jpg" class="d-block w-100" alt="...">
+                <img src="../image/สวนสาธารณะอต_230223_8.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="1000">
-                <img src="/image/สวนสาธารณะอต_230223_11.jpg" class="d-block w-100" alt="...">
+                <img src="../image/สวนสาธารณะอต_230223_11.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="1000">
-                <img src="/image/สวนสาธารณะอต_230223_12.jpg" class="d-block w-100" alt="...">
+                <img src="../image/สวนสาธารณะอต_230223_12.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="1000">
-                <img src="/image/สวนสาธารณะอต_230223_13.jpg" class="d-block w-100" alt="...">
+                <img src="../image/สวนสาธารณะอต_230223_13.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="1000">
-                <img src="/image/สวนสาธารณะอต_230223_14.jpg" class="d-block w-100" alt="...">
+                <img src="../image/สวนสาธารณะอต_230223_14.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
