--- a/content.html
+++ b/content.html
@@ -50,31 +50,31 @@
             <div id="carouselExampleInterval" class="carousel slide" data-sbs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active" data-bs-interval="1500">
-                    <img src="./image/อนุสาวรีย์พระยาพิชัยดาบหัก_230223_0.jpg" class="d-block w-100" alt="...">
+                    <img src="image/อนุสาวรีย์พระยาพิชัยดาบหัก_230223_0.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item" data-bs-interval="1500">
-                    <img src="./image/อนุสาวรีย์พระยาพิชัยดาบหัก_230223_1.jpg" class="d-block w-100" alt="...">
+                    <img src="image/อนุสาวรีย์พระยาพิชัยดาบหัก_230223_1.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item" data-bs-interval="1500">
-                    <img src="./image/อนุสาวรีย์พระยาพิชัยดาบหัก_230223_2.jpg" class="d-block w-100" alt="...">
+                    <img src="image/อนุสาวรีย์พระยาพิชัยดาบหัก_230223_2.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item" data-bs-interval="1500">
-                    <img src="./image/อนุสาวรีย์พระยาพิชัยดาบหัก_230223_5.jpg" class="d-block w-100" alt="...">
+                    <img src="image/อนุสาวรีย์พระยาพิชัยดาบหัก_230223_5.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item" data-bs-interval="1500">
-                    <img src="./image/อนุสาวรีย์พระยาพิชัยดาบหัก_230223_7.jpg" class="d-block w-100" alt="...">
+                    <img src="image/อนุสาวรีย์พระยาพิชัยดาบหัก_230223_7.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item" data-bs-interval="1500">
-                    <img src="./image/อนุสาวรีย์พระยาพิชัยดาบหัก.jpg" class="d-block w-100" alt="...">
+                    <img src="image/อนุสาวรีย์พระยาพิชัยดาบหัก.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item" data-bs-interval="1500">
-                    <img src="./image/อนุสาวรีย์พระยาพิชัยดาบหัก_230223_10.jpg" class="d-block w-100" alt="...">
+                    <img src="image/อนุสาวรีย์พระยาพิชัยดาบหัก_230223_10.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item" data-bs-interval="1500">
-                    <img src="./image/อนุสาวรีย์พระยาพิชัยดาบหัก_230223_11.jpg" class="d-block w-100" alt="...">
+                    <img src="image/อนุสาวรีย์พระยาพิชัยดาบหัก_230223_11.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item" data-bs-interval="1500">
-                    <img src="./image/อนุสาวรีย์พระยาพิชัยดาบหัก_230223_12.jpg" class="d-block w-100" alt="...">
+                    <img src="image/อนุสาวรีย์พระยาพิชัยดาบหัก_230223_12.jpg" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
